Revert "fix shifting in header"
This reverts commit dbaab922e07891aee5eeabd8d6405b707316c0c3.

--- a/assets/stylesheets/layout/header.css
+++ b/assets/stylesheets/layout/header.css
@@ -35,7 +35,6 @@ header .links a {
   text-decoration: none;
   color: black;
   font-size: 1.2em;
-  border-bottom: 2px solid #ffffff; /* invisible line to reserve the space */
 }
 
 header .links a.active, header .links a:hover {
@@ -87,7 +86,7 @@ header .flags {
   }
 
   header .flags {
-    margin-top: 3px;
+    margin-top: 5px;
   }
 
   header .flags img {
